--- a/public/assets/language/vn.json
+++ b/public/assets/language/vn.json
@@ -29,7 +29,7 @@
     "enterEmail": "Nhập email ",
     "enterContent": "Nhập nội dung",
     "enterName": "Nhập họ tên",
-    "enterNumberPhone": "Nhập số điện thoại (không bắt buộc)",
+    "enterNumberPhone": "Nhập số điện thoại",
     "enterLinkFace": "Nhập link facebook của bạn (không bắt buộc)",
     "enterGmail": "Nhập gmail (không bắt buộc)",
     "enterPassWord": "Nhập mật khẩu",
