fix add social media

--- a/public/assets/language/en.json
+++ b/public/assets/language/en.json
@@ -91,6 +91,10 @@
     "experience": "Experience"
   },
   "home": {
+    "socialMedia":{
+    "connectSocialMedia": "Connect via social media"
+
+    },
     "info":{
       "techStackMain":"Tech Stack",
       "yearsExperience":"Years Experience",
