--- a/public/assets/language/en.json
+++ b/public/assets/language/en.json
@@ -132,7 +132,9 @@
   "login": {
     "login": "Login",
     "password": "Password",
-    "saveLogin": "Remember login"
+    "saveLogin": "Remember login",
+    "loginSuccess": "Login successful",
+    "loginError": "Incorrect credentials"
   },
   "register": {
     "register": "Register for class",
@@ -141,7 +143,44 @@
     "age": "Student age",
     "name": "Full name"
   },
-  "footer":{
-    "aboutUs":"About us"
+  "footer": {
+    "aboutUs": "About us"
+  },
+  "accounts": {
+    "title": "Account List",
+    "name": "Name",
+    "address": "Address",
+    "privateKey": "Private Key",
+    "actions": "Actions",
+    "addNew": "Add New",
+    "editAccount": "Edit Account",
+    "addAccount": "Add New Account",
+    "addSuccess": "Account added successfully",
+    "updateSuccess": "Account updated successfully",
+    "deleteSuccess": "Account deleted successfully",
+    "addError": "Failed to add account",
+    "updateError": "Failed to update account",
+    "deleteError": "Failed to delete account",
+    "confirmDelete": "Are you sure you want to delete this account?",
+    "loading": "Loading..."
+  },
+  "finances": {
+    "title": "Finance Management",
+    "date": "Date",
+    "usdAmount": "Amount (USD)",
+    "vndAmount": "Amount (VND)",
+    "status": "Status",
+    "actions": "Actions",
+    "addNew": "Add New",
+    "editFinance": "Edit Transaction",
+    "addFinance": "Add New Transaction",
+    "addSuccess": "Transaction added successfully",
+    "updateSuccess": "Transaction updated successfully",
+    "deleteSuccess": "Transaction deleted successfully",
+    "addError": "Failed to add transaction",
+    "updateError": "Failed to update transaction",
+    "deleteError": "Failed to delete transaction",
+    "confirmDelete": "Are you sure you want to delete this transaction?",
+    "loading": "Loading..."
   }
 }
