--- a/public/assets/language/en.json
+++ b/public/assets/language/en.json
@@ -251,6 +251,32 @@
     "subtitle": "Securely manage your connected wallets and accounts",
     "noAccounts": "No accounts found"
   },
+  "accountClouds": {
+    "title": "AccountCloud Management",
+    "nameApp": "App Name",
+    "userName": "Username",
+    "password": "Password",
+    "pinCode": "PIN Code",
+    "stk": "STK",
+    "pinCodeBackup": "Backup PIN",
+    "type": "Type",
+    "actions": "Actions",
+    "addNew": "Add New",
+    "editAccount": "Edit AccountCloud",
+    "addAccount": "Add New AccountCloud",
+    "addSuccess": "AccountCloud added successfully",
+    "updateSuccess": "AccountCloud updated successfully",
+    "deleteSuccess": "AccountCloud deleted successfully",
+    "addError": "Failed to add AccountCloud",
+    "updateError": "Failed to update AccountCloud",
+    "deleteError": "Failed to delete AccountCloud",
+    "confirmDelete": "Are you sure you want to delete this AccountCloud?",
+    "loading": "Loading...",
+    "subtitle": "Manage your cloud app accounts securely",
+    "noAccounts": "No AccountCloud records found",
+    "unnamed": "Unnamed",
+    "requiredError": "Username and password are required"
+  },
   "finances": {
     "title": "Finance Management",
     "date": "Date",
