--- a/public/assets/language/vn.json
+++ b/public/assets/language/vn.json
@@ -222,6 +222,32 @@
     "subtitle": "Quản lý an toàn các ví và tài khoản được kết nối của bạn",
     "noAccounts": "Không tìm thấy tài khoản nào"
   },
+  "accountClouds": {
+    "title": "Quản lý AccountCloud",
+    "nameApp": "Tên ứng dụng",
+    "userName": "Tên đăng nhập",
+    "password": "Mật khẩu",
+    "pinCode": "Mã PIN",
+    "stk": "STK",
+    "pinCodeBackup": "PIN dự phòng",
+    "type": "Loại",
+    "actions": "Hành động",
+    "addNew": "Thêm mới",
+    "editAccount": "Chỉnh sửa AccountCloud",
+    "addAccount": "Thêm AccountCloud mới",
+    "addSuccess": "Thêm AccountCloud thành công",
+    "updateSuccess": "Cập nhật AccountCloud thành công",
+    "deleteSuccess": "Xóa AccountCloud thành công",
+    "addError": "Thêm AccountCloud thất bại",
+    "updateError": "Cập nhật AccountCloud thất bại",
+    "deleteError": "Xóa AccountCloud thất bại",
+    "confirmDelete": "Bạn có chắc chắn muốn xóa AccountCloud này?",
+    "loading": "Đang tải...",
+    "subtitle": "Quản lý an toàn các tài khoản ứng dụng cloud của bạn",
+    "noAccounts": "Không tìm thấy AccountCloud nào",
+    "unnamed": "Chưa đặt tên",
+    "requiredError": "Tên đăng nhập và mật khẩu là bắt buộc"
+  },
   "finances": {
     "title": "Quản lý tài chính",
     "date": "Ngày",
